--- a/metadata.yml
+++ b/metadata.yml
@@ -4,6 +4,7 @@ emf_public: true
 emf_automatized: true
 emf_reproducible: false
 emf_draft: false
+emf_data_type: creaf_data
 nodes: ''
 authors:
 - vgranda
